<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".SettingActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorBackground"
            android:onClick="parentSpaceClick">

        <include layout="@layout/layout_top_menu_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingHorizontal="80dp"
                android:paddingTop="40dp"
                android:gravity="center_horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

            <!--System setting-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/table_title"
                            android:text="@string/title_server_info" />

                    <LinearLayout style="@style/table_row">

                        <TextView
                                style="@style/table_row_title"
                                android:text="@string/label_server_ip" />

                        <EditText
                                android:id="@+id/et_setting_server_ip"
                                style="@style/table_row_data_editor1" />
                    </LinearLayout>

                    <LinearLayout style="@style/table_row">

                        <TextView
                                style="@style/table_row_title"
                                android:text="@string/label_server_port" />

                        <EditText
                                android:id="@+id/et_setting_port"
                                style="@style/table_row_data_editor1"
                                android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="right">

                        <Button
                                android:id="@+id/btn_setting_check_server"
                                android:layout_width="160dp"
                                android:layout_height="52dp"
                                android:background="@drawable/shape_orange_rectangle_button"
                                android:gravity="center"
                                android:stateListAnimator="@null"
                                android:text="@string/check"
                                android:textColor="#fff"
                                android:textSize="27sp"
                                android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                            style="@style/table_title"
                            android:layout_marginTop="24dp"
                            android:text="@string/title_etc" />

                    <LinearLayout style="@style/table_row">

                        <TextView
                                style="@style/table_row_title"
                                android:text="@string/label_version" />

                        <TextView
                                android:id="@+id/tv_app_version"
                                style="@style/table_row_data_readonly"
                                android:text="v1.0" />
                    </LinearLayout>

                    <!--                    <TextView-->
                    <!--                            android:layout_width="wrap_content"-->
                    <!--                            android:layout_height="wrap_content"-->
                    <!--                            android:layout_marginTop="40dp"-->
                    <!--                            android:layout_marginBottom="20dp"-->
                    <!--                            android:textSize="32sp"-->
                    <!--                            android:textStyle="bold"-->
                    <!--                            android:textColor="@color/colorWhite"-->
                    <!--                            android:text="LEFT SIDE" />-->

                    <!--                    &lt;!&ndash; Factory &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_factory" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_factory1" />-->
                    <!--                    </LinearLayout>-->

                    <!--                    &lt;!&ndash; Room &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_zone" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_zone1" />-->
                    <!--                    </LinearLayout>-->

                    <!--                    &lt;!&ndash; Line &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_line" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_line1" />-->
                    <!--                    </LinearLayout>-->

                </LinearLayout>

                <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/table_title"
                            android:text="@string/title_password_info" />

                    <LinearLayout style="@style/table_row">

                        <TextView
                                style="@style/table_row_title"
                                android:text="@string/label_current" />

                        <EditText
                                android:id="@+id/et_password_current"
                                style="@style/table_row_data_editor1" />
                    </LinearLayout>

                    <LinearLayout style="@style/table_row">

                        <TextView
                                style="@style/table_row_title"
                                android:text="@string/label_new" />

                        <EditText
                                android:id="@+id/et_password_new"
                                style="@style/table_row_data_editor1" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="right">

                        <Button
                                android:id="@+id/btn_password_save"
                                android:layout_width="160dp"
                                android:layout_height="52dp"
                                android:background="@drawable/shape_orange_rectangle_button"
                                android:gravity="center"
                                android:stateListAnimator="@null"
                                android:text="@string/save"
                                android:textColor="#fff"
                                android:textSize="27sp"
                                android:textStyle="bold" />
                    </LinearLayout>


                    <!--                    <TextView-->
                    <!--                            android:layout_width="wrap_content"-->
                    <!--                            android:layout_height="wrap_content"-->
                    <!--                            android:layout_marginTop="40dp"-->
                    <!--                            android:layout_marginBottom="20dp"-->
                    <!--                            android:textSize="32sp"-->
                    <!--                            android:textStyle="bold"-->
                    <!--                            android:textColor="@color/colorWhite"-->
                    <!--                            android:text="RIGHT SIDE" />-->

                    <!--                    &lt;!&ndash; Factory &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_factory" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_factory2" />-->
                    <!--                    </LinearLayout>-->

                    <!--                    &lt;!&ndash; Room &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_zone" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_zone2" />-->
                    <!--                    </LinearLayout>-->

                    <!--                    &lt;!&ndash; Line &ndash;&gt;-->
                    <!--                    <LinearLayout style="@style/table_row">-->
                    <!--                        <TextView style="@style/table_row_title" android:text="@string/label_line" />-->
                    <!--                        <TextView style="@style/table_row_data_selector" android:id="@+id/tv_setting_line2" />-->
                    <!--                    </LinearLayout>-->

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        style="@style/table_title"
                        android:layout_marginTop="24dp"
                        android:text="@string/title_app_title" />

                <LinearLayout style="@style/table_row" android:layout_height="55dp">

                    <TextView
                            style="@style/table_row_title"
                            android:text="@string/label_main_title" />

                    <EditText
                            android:id="@+id/et_main_title"
                            style="@style/table_row_data_editor1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="80dp"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:gravity="end"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_setting_cancel"
                    style="@style/btn_cancel"
                    android:textSize="30sp"
                    android:stateListAnimator="@null"
                    android:text="@string/cancel" />
            <Button
                    android:id="@+id/btn_setting_confirm"
                    style="@style/btn_orange"
                    android:textSize="30sp"
                    android:stateListAnimator="@null"
                    android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>