<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dialog_bg"
                android:background="#88000000">

    <LinearLayout
            android:id="@+id/ll_popup_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    <LinearLayout
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorWhite"
            android:focusableInTouchMode="true"
            android:layout_centerInParent="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:background="#4f4f4f"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/title_password_info"
                    android:textColor="@color/colorWhite"
                    android:textSize="28dp"
                    android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="40dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray"
                    android:text="@string/title_password_info"/>
            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:background="@color/colorEditor1"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    android:textSize="30sp"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorBlack" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_cancel"
                    style="@style/btn_cancel"
                    android:layout_width="150dp"
                    android:stateListAnimator="@null"
                    android:textSize="26sp"
                    android:text="@string/exit" />
            <Button
                    android:id="@+id/btn_confirm"
                    style="@style/btn_orange"
                    android:layout_width="170dp"
                    android:stateListAnimator="@null"
                    android:textSize="25sp"
                    android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
